--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,719 @@ a {
   box-sizing: border-box;
 }
 
+.navbar-toggler-icon.up {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1024 1024' style='width:1em; height:1em;fill:currentColor;vertical-align:middle;overflow: hidden;'><path d='M768 785.066667a17.015467 17.015467 0 0 1-12.066133-5.000534L512 536.132267 268.066133 780.066133a17.0496 17.0496 0 1 1-24.132266-24.132266l256-256a17.0496 17.0496 0 0 1 24.132266 0l256 256A17.0496 17.0496 0 0 1 768 785.066667z m0-256a17.015467 17.015467 0 0 1-12.066133-5.000534L512 280.132267 268.066133 524.066133a17.0496 17.0496 0 1 1-24.132266-24.132266l256-256a17.0496 17.0496 0 0 1 24.132266 0l256 256A17.0496 17.0496 0 0 1 768 529.066667z'/></svg>");
+}
+
+.dark .navbar-toggler-icon.up {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1024 1024' style='width:1em; height:1em;fill:rgba(255,255,255,0.85);vertical-align:middle;overflow: hidden;'><path d='M768 785.066667a17.015467 17.015467 0 0 1-12.066133-5.000534L512 536.132267 268.066133 780.066133a17.0496 17.0496 0 1 1-24.132266-24.132266l256-256a17.0496 17.0496 0 0 1 24.132266 0l256 256A17.0496 17.0496 0 0 1 768 785.066667z m0-256a17.015467 17.015467 0 0 1-12.066133-5.000534L512 280.132267 268.066133 524.066133a17.0496 17.0496 0 1 1-24.132266-24.132266l256-256a17.0496 17.0496 0 0 1 24.132266 0l256 256A17.0496 17.0496 0 0 1 768 529.066667z'/></svg>");
+}
+
+
+.drop {
+  padding-top: 2em;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+
   body {
-    color: white;
-    background: black;
+    background: #111;
   }
+}
+
+@media (prefers-color-scheme: light) {
+  html {
+    color-scheme: light;
+  }
+
+  body {
+    background: #FFF;
+  }
+}
+
+body.light {
+  background: #FFF;
+}
+
+body.dark {
+  background: #111;
+}
+
+.card-body {
+  min-height: 8.8em;
+}
+
+.navbar-toggler {
+  border-radius: 1px;
+  border-color: rgba(0, 0, 0, 0.45);
+}
+
+.darkmode {
+  float: right;
+  margin-right: 1em;
+}
+
+.darkmode .form-switch {
+  font-size: 0.8em;
+}
+
+.darkmode .form-check-input:checked {
+  background-color: #333;
+  border-color: #333;
+}
+
+.darkmode .form-check-input:focus {
+  box-shadow: 0 0 0 0.25rem rgb(13 13 13 / 25%)
+}
+
+main.container {
+  min-height: 60vh;
+  padding-top: 1.5rem;
+  margin-top: 57px;
+  transition: all 0.4s;
+}
+
+.authoravatar {
+  min-width: 96px !important;
+}
+
+.rss-svg {
+  margin-bottom: 5px;
+}
+
+/* 
+Template Name: Mediumish 
+Copyright: Sal, WowThemes.net, https://www.wowthemes.net 
+License: https://www.wowthemes.net/freebies-license/ 
+*/
+@media screen and (min-width:1500px) {
+  html {
+    font-size: 18px;
+  }
+
+  /* Increase the font size on higher resolutions */
+  .container {
+    max-width: 80%;
+  }
+}
+
+.mainheading {
+  padding: 1rem 0rem;
+}
+
+a {
+  color: #00ab6b;
+  transition: all 0.2s;
+}
+
+a:hover {
+  color: #038252;
+  text-decoration: none;
+}
+
+.follows {
+  margin-left: 1em;
+}
+
+pre {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: #E3EDF3 1px solid;
+  width: 100%;
+  padding: 7px;
+  font-family: monospace, sans-serif;
+  font-size: .9rem;
+  white-space: pre;
+  overflow: auto;
+  background: #fff;
+  border-radius: 0px;
+  line-height: 1.6;
+  color: #333;
+  margin-bottom: -rem;
+}
+
+.topnavigation {
+  background: rgba(255, 255, 255, .97);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .15);
+  transition: top 0.2s ease-in-out;
+}
+
+section {
+  margin-top: 1em;
+  margin-bottom: 4em;
+}
+
+section.recent-posts {
+  margin-bottom: 0;
+}
+
+.section-title h2 {
+  border-bottom: 1px solid rgba(0, 0, 0, .125);
+  margin-bottom: 25px;
+  font-weight: 700;
+  font-size: 1.4rem;
+  margin-bottom: 27px;
+}
+
+.dark .section-title h2 {
+  border-bottom: 1px solid rgba(255, 255, 255, .125);
+}
+
+.section-title span {
+  border-bottom: 1px solid rgba(0, 0, 0, .44);
+  display: inline-block;
+  padding-bottom: 20px;
+  margin-bottom: -1px;
+}
+
+.dark .section-title span {
+  border-bottom: 1px solid rgba(255, 255, 255, .44);
+}
+
+.article-post ol,
+.article-post ul {
+  margin-bottom: 1.5rem;
+}
+
+.article-post ol ol,
+.article-post ul ul {
+  list-style: disc;
+  margin-bottom: 0rem;
+}
+
+@media (min-width:576px) {
+  .card-columns.listfeaturedtag {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media (min-width:992px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 0.8rem;
+    padding-left: 0.8rem;
+  }
+}
+
+.listfeaturedtag {
+  border: 1px solid rgba(0, 0, 0, .125);
+  border-radius: .25rem;
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.listfeaturedtag .wrapthumbnail {
+  height: 290px;
+  flex: 0 0 auto;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.research .listfeaturedtag .wrapthumbnail {
+  height: 309px;
+}
+
+.wrapthumbnail img,
+.maxthumb img {
+  object-fit: cover;
+}
+
+.maxthumb {
+  max-height: 300px;
+  height: 290px;
+  overflow: hidden;
+  position: relative;
+}
+
+.listfeaturedtag .card,
+.card-footer {
+  border: 0;
+}
+
+.listfeaturedtag .thumbnail {
+  background-size: cover;
+  height: 100%;
+  display: block;
+  background-position: 38% 22% !important;
+  background-origin: border-box !important;
+  border-top-left-radius: .25rem;
+  border-bottom-left-radius: .25rem;
+}
+
+.listfeaturedtag .card-block {
+  padding-left: 0;
+}
+
+.listfeaturedtag h2.card-title,
+.listrecent h2.card-title {
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.listfeaturedtag h4.card-text,
+.listrecent h4.card-text {
+  font-size: 0.95rem;
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+.featured-box-img-cover {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width:991px) {
+  .featured-box-img-cover {
+    height: auto;
+    width: 100%;
+  }
+}
+
+.wrapfooter {
+  font-size: .8rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+
+.author-thumb {
+  width: 40px;
+  height: 40px;
+  margin-right: 13px;
+  border-radius: 100%;
+}
+
+.post-top-meta {
+  margin-bottom: 2rem;
+}
+
+.post-top-meta .author-thumb {
+  width: 72px;
+  height: 72px;
+}
+
+.post-top-meta.authorpage .author-thumb {
+  margin-top: 40px;
+}
+
+.post-top-meta span {
+  font-size: 0.9rem;
+  display: inline-block;
+}
+
+.post-top-meta .author-description {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-size: 0.90rem;
+}
+
+.toc ul {
+  list-style: decimal;
+  font-weight: 400;
+}
+
+.author-meta {
+  flex: 1 1 auto;
+  white-space: nowrap !important;
+  text-overflow: ellipsis !important;
+  overflow: hidden !important;
+}
+
+span.post-name,
+span.post-date,
+span.author-meta {
+  display: inline-block;
+}
+
+
+span.post-read-more {
+  align-items: center;
+  display: inline-block;
+  margin-top: 8px;
+}
+
+span.post-read-more a {
+  color: rgba(0, 0, 0, .44);
+}
+
+.dark .topnavigation .form-control {
+  background-color: #AAA;
+}
+
+.topnavigation .form-control {
+  font-size: 0.8rem;
+  overflow: hidden;
+  border: 1px solid rgba(0, 0, 0, 0.09);
+  min-width: 180px;
+}
+
+.topnavigation .form-inline {
+  margin-left: 15px;
+}
+
+.topnavigation .form-inline .btn {
+  margin-left: -50px;
+  border: 0;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.topnavigation .form-inline .btn:hover,
+.topnavigation .form-inline .btn:active {
+  background: transparent;
+  color: green;
+}
+
+.topnavigation .navbar-brand {
+  font-weight: 500;
+}
+
+.topnavigation .dropdown-menu {
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  margin: .5rem 0 0;
+}
+
+.topnavigation .nav-item,
+.dropdown-menu {
+  font-size: 0.9rem;
+}
+
+
+
+.topnavigation .navbar-brand img {
+  max-height: 30px;
+  margin-right: 5px;
+}
+
+.mainheading h1.sitetitle {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.mainheading h1.posttitle {
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.footer {
+  border-top: 1px solid rgba(0, 0, 0, .05) !important;
+  padding-top: 15px;
+  padding-bottom: 42px;
+  font-size: 0.8rem;
+  margin-top: 14em !important;
+  position: relative;
+}
+
+
+.article-post {
+  font-family: Candara, Cambria, Georgia, "Times New Roman", Times, serif;
+  font-size: 1.2rem;
+  line-height: 1.84;
+}
+
+blockquote {
+  border-left: 4px solid #00ab6b;
+  padding: 0 20px;
+  font-style: italic;
+}
+
+.article-post p,
+.article-post blockquote {
+  margin: 0 0 1.5rem 0;
+}
+
+.featured-image {
+  display: block;
+  margin-bottom: 1.5rem;
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.featured-image img {
+  object-fit: cover;
+}
+
+.share {
+  text-align: center;
+}
+
+.share p {
+  margin-bottom: 10px;
+  font-size: 0.95rem;
+}
+
+.share ul li {
+  display: inline-block;
+  margin-bottom: 9px;
+}
+
+.share ul {
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.share ul li i.fa {
+  border: 1px solid #ddd;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.svgIcon {
+  vertical-align: middle;
+}
+
+.sticky-top-offset {
+  top: 100px;
+}
+
+@media (min-width:1024px) {
+  .share ul li {
+    display: block;
+  }
+}
+
+@media (max-width:999px) {
+  .featured-box-img-cover {
+    height: 359px;
+  }
+
+
+  .listfeaturedtag .card {
+    height: auto;
+  }
+
+  .listfeaturedtag .wrapfooter {
+    position: relative;
+    margin-top: 30px;
+  }
+
+  .listfeaturedtag .card-block {
+    padding: 20px;
+  }
+
+  .footer {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+}
+
+@media (max-width:1024px) {
+  .post-top-meta .col-md-10 {
+    text-align: center;
+  }
+}
+
+@media (max-width:767px) {
+  .post-top-meta.authorpage {
+    text-align: center;
+  }
+}
+
+ul.tags {
+  list-style: none;
+  padding-left: 0;
+  margin: 0 0 3rem 0;
+}
+
+ul.tags li {
+  display: inline-block;
+  font-size: 0.9rem;
+}
+
+ul.tags li a {
+  background: rgba(0, 0, 0, .05);
+  border-radius: 3px;
+  padding: 5px 10px 8px;
+  margin-right: 0.3em;
+}
+
+ul.tags li a:hover {
+  background: rgba(0, 0, 0, .07);
+  text-decoration: none;
+}
+
+.dark ul.tags li a {
+  background: rgba(255, 255, 255, .05);
+}
+
+.dark ul.tags li a:hover {
+  background: rgba(255, 255, 255, .07);
+}
+
+.dark .card {
+  background-color: transparent;
+}
+
+.form-control::-webkit-input-placeholder {
+  color: rgba(0, 0, 0, .5);
+}
+
+.form-control:-moz-placeholder {
+  color: rgba(0, 0, 0, .5);
+}
+
+.form-control::-moz-placeholder {
+  color: rgba(0, 0, 0, .5);
+}
+
+.form-control:-ms-input-placeholder {
+  color: rgba(0, 0, 0, .5);
+}
+
+.form-control::-ms-input-placeholder {
+  color: rgba(0, 0, 0, .5);
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+.article-post .h1,
+.article-post .h2,
+.article-post .h3,
+.article-post .h4,
+.article-post .h5,
+.article-post .h6,
+.article-post h1,
+.article-post h2,
+.article-post h3,
+.article-post h4,
+.article-post h5,
+.article-post h6 {
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+
+.article-post h5 {
+  font-size: 0.8rem;
+  margin-bottom: .75rem;
+  margin-top: 2rem;
+}
+
+.article-post img.shadow {
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.30);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.30);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.30);
+}
+
+.layout-page .article-post {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+}
+
+.layout-page .article-post p {
+  margin-bottom: 1rem;
+}
+
+img {
+  max-width: 100%;
+}
+
+.bottompagination span.navigation {
+  display: block;
+  font-size: 0.93rem;
+  padding: 15px 0 0 0;
+  text-align: center;
+  margin-bottom: 0rem;
+  color: #999;
+}
+
+.pointerup {
+  margin-bottom: -17px;
+  margin-left: 49%;
+  font-size: 30px;
+}
+
+.pointerup i.fa {
+  color: #eaeaea;
+}
+
+.bottompagination span.navigation i {
+  display: inline-block;
+}
+
+span.navigation {
+  display: inline-block;
+  font-size: 0.93rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.pagination {
+  display: block;
+}
+
+iframe {
+  max-width: 100%;
+}
+
+
+.mb-30px {
+  margin-bottom: 30px;
+}
+
+.flex-first {
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+  -ms-flex-order: -1;
+  order: -1;
+}
+
+@media (min-width: 768px) {
+  .flex-md-unordered {
+    -webkit-box-ordinal-group: 1;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+  }
+
+  .flex-first {
+    -webkit-box-ordinal-group: 0;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .share {
+    margin-top: 30px;
+  }
+}
+
+.card .img-fluid {
+  width: 100%;
+}
+
+.sticky-top-80 {
+  top: 80px;
+}
+
+.sticky-top h6 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
